feat(plugin): reload